--- a/VRChat/62/1261662.html
+++ b/VRChat/62/1261662.html
@@ -4,7 +4,7 @@
     <link href="/manifest.json" rel="manifest">
     <meta charset="utf-8">
     <title>
-      オリジナル3Dアバター アーミリィ - アストロミント - BOOTH
+      【オリジナル3Dモデル】アーミリィ - アストロミント - BOOTH
     </title>
     <meta name="description" content=
     "◇モデル名：アーミリィ ・推奨環境：Unity2019.4.31f1 ・下記の利用規約に同意いただけた場合のみご購入をお願いいたします。 ◇解説 ・本アバターはDynamic Boneに対応しております。スカートや髪等を揺らしたい場合は事前にDynamic Boneを購入、インポートしてください。 ・VRChatやVRゲーム、バーチャルモーションキャプチャー等での個人利用、また公開、販売を前提としたゲームへの利用を想定しております。 ・テクスチャの編集用SAI、PSDファイルを同梱しておりますので、改変にお使いください。">
@@ -14,14 +14,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "オリジナル3Dアバター アーミリィ - アストロミント - BOOTH">
+    "【オリジナル3Dモデル】アーミリィ - アストロミント - BOOTH">
     <meta name="twitter:description" content=
     "◇モデル名：アーミリィ ・推奨環境：Unity2019.4.31f1 ・下記の利用規約に同意いただけた場合のみご購入をお願いいたします。 ◇解説 ・本アバターはDynamic Boneに対応しております。スカートや髪等を揺らしたい場合は事前にDynamic Boneを購入、インポートしてください。 ・VRChatやVRゲーム、バーチャルモーションキャプチャー等での個人利用、また公開、販売を前提としたゲームへの利用を想定しております。 ・テクスチャの編集用SAI、PSDファイルを同梱しておりますので、改変にお使いください。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/e02efdb4-98ff-483d-9401-bc413dad47a2/i/1261662/0a307dac-5da7-4a94-9252-40d735861725_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "オリジナル3Dアバター アーミリィ - アストロミント - BOOTH">
+    "【オリジナル3Dモデル】アーミリィ - アストロミント - BOOTH">
     <meta property="og:description" content=
     "◇モデル名：アーミリィ ・推奨環境：Unity2019.4.31f1 ・下記の利用規約に同意いただけた場合のみご購入をお願いいたします。 ◇解説 ・本アバターはDynamic Boneに対応しております。スカートや髪等を揺らしたい場合は事前にDynamic Boneを購入、インポートしてください。 ・VRChatやVRゲーム、バーチャルモーションキャプチャー等での個人利用、また公開、販売を前提としたゲームへの利用を想定しております。 ・テクスチャの編集用SAI、PSDファイルを同梱しておりますので、改変にお使いください。">
     <meta property="og:image" content=
@@ -68,9 +68,9 @@
     <script src=
     "https://d.line-scdn.net/r/web/social-plugin/js/thirdparty/loader.min.js"
     defer="defer" nonce=
-    "x78kyD6NRLV5PKVTCTUNgq6iDJ4doYMClH42PRiKTXY="></script>
+    "/8fPOPQifDNcoN3YiBoISntlIlp4A38H+YRY9q75meI="></script>
     <script src="https://asset.booth.pm/twitter.js" defer="defer"
-    nonce="x78kyD6NRLV5PKVTCTUNgq6iDJ4doYMClH42PRiKTXY="></script>
+    nonce="/8fPOPQifDNcoN3YiBoISntlIlp4A38H+YRY9q75meI="></script>
     <script id="shop_with_items" type="text/x-template">
     <div class="shop-card l-card" v-if="shop"><div class="shop-card__box-wrap"><div class="shop-card__box"><div class="shop-card-box-body"><a :href="shop.base_url" @click="sendAnalyticsEvent(&quot;shop_index&quot;, &quot;click&quot;)" target="_blank"><div class="shop-card__thumbnails"><div class="shop-card__thumbnails--at-left on-white-bg"><img :alt="largeThumbItem.name" :data-original="hideThumbnail(largeThumbItem) ? &quot;https://asset.booth.pm/assets/thumbnail-alert-312-ede42745738fe1172fe21985c735ae1acab66f179bca53964b73af31cd0e07e3.png&quot; : largeThumbItem.image_url" class="lazyload u-w-100" /></div><div class="shop-card__thumbnails--at-right"><div class="shop-card__thumbnail-wrap on-white-bg" v-for="item in smallThumbItems"><div class="shop-card__thumbnail"><img :alt="item.name" :data-original="hideThumbnail(item) ? &quot;https://asset.booth.pm/assets/thumbnail-alert-312-ede42745738fe1172fe21985c735ae1acab66f179bca53964b73af31cd0e07e3.png&quot; : item.image_url" class="lazyload u-w-100" /></div></div></div></div></a></div><div class="shop-card__box-footer"><div class="shop-card__owner-info"><div class="shop-card__avatar"><a :href="shop.base_url" @click="sendAnalyticsEvent(&quot;shop_index&quot;, &quot;click&quot;)" target="_blank"><img :alt="shop.user.nickname" :data-original="shop.user.thumbnail_url" class="lazyload user_avatar-48 mobile-user_avatar-38" height="42" width="42" /></a></div><div class="shop-card__shop-name"><a :href="shop.base_url" @click="sendAnalyticsEvent(&quot;shop_index&quot;, &quot;click&quot;)" class="text-ui" target="_blank">{{ shop.name }}</a></div></div><div class="shop-card__actions"><follow-btn :ga-params="gaParams" :shop="shop"></follow-btn></div></div></div></div></div>
     </script>
@@ -83,9 +83,9 @@
     <script src=
     "https://asset.booth.pm/assets/d85a416abc69d777b360.js" defer=
     "defer" nonce=
-    "x78kyD6NRLV5PKVTCTUNgq6iDJ4doYMClH42PRiKTXY="></script>
+    "/8fPOPQifDNcoN3YiBoISntlIlp4A38H+YRY9q75meI="></script>
     <script type="application/ld+json">
-    {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dアバター アーミリィ","description":"◇モデル名：アーミリィ\n    ・推奨環境：Unity2019.4.31f1\n    ・下記の利用規約に同意いただけた場合のみご購入をお願いいたします。\n\n\n◇解説\n    ・本アバターはDynamic Boneに対応しております。スカートや髪等を揺らしたい場合は事前にDynamic Boneを購入、インポートしてください。\n    ・VRChatやVRゲーム、バーチャルモーションキャプチャー等での個人利用、また公開、販売を前提としたゲームへの利用を想定しております。\n    ・テクスチャの編集用SAI、PSDファイルを同梱しておりますので、改変にお使いください。\n    ・サンプル用の8種類を含めた表情モーフを47種類搭載しております(リップシンク・瞬き用を除く)。\n    　組み合わせることで様々な表情を作成することが可能です。\n    ・銃とエフェクトを同梱しております。銃はブレンドシェイプでサイズ・グリップ経を調整可能です。\n\n\n◇構成\n    ・Armilly.Unitypackage\n    ・Armilly.fbx\n    ・Gun.fbx\n    ・Effets.fbx\n    ・Textures（フォルダ）\n        png形式テクスチャファイルと編集用SAI、PSDファイルを格納\n        ※テクスチャはSAI ver 1.2.5メインで作成しているため、PSD形式では実際のテクスチャと一部異なる場合がございます。\n\n\n◇利用方法\n\n1.Armilly.zipを解凍します。\n\n2.Unityの新規プロジェクトを作成し、VRCSDK、Dynamic Bone（任意）をインポートします。\n\n3.Armilly.unitypackageをインポートし、Armilly.unityをダブルクリックします。\n\n4.VRCSDKからモデルをアップロードしてください。","url":"https://booth.pm/ja/items/1261662","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/e02efdb4-98ff-483d-9401-bc413dad47a2/i/1261662/0a307dac-5da7-4a94-9252-40d735861725_base_resized.jpg"}
+    {"@context":"https://schema.org","@type":"Product","name":"【オリジナル3Dモデル】アーミリィ","description":"◇モデル名：アーミリィ\n    ・推奨環境：Unity2019.4.31f1\n    ・下記の利用規約に同意いただけた場合のみご購入をお願いいたします。\n\n\n◇解説\n    ・本アバターはDynamic Boneに対応しております。スカートや髪等を揺らしたい場合は事前にDynamic Boneを購入、インポートしてください。\n    ・VRChatやVRゲーム、バーチャルモーションキャプチャー等での個人利用、また公開、販売を前提としたゲームへの利用を想定しております。\n    ・テクスチャの編集用SAI、PSDファイルを同梱しておりますので、改変にお使いください。\n    ・サンプル用の8種類を含めた表情モーフを47種類搭載しております(リップシンク・瞬き用を除く)。\n    　組み合わせることで様々な表情を作成することが可能です。\n    ・銃とエフェクトを同梱しております。銃はブレンドシェイプでサイズ・グリップ経を調整可能です。\n\n\n◇構成\n    ・Armilly.Unitypackage\n    ・Armilly.fbx\n    ・Gun.fbx\n    ・Effets.fbx\n    ・Textures（フォルダ）\n        png形式テクスチャファイルと編集用SAI、PSDファイルを格納\n        ※テクスチャはSAI ver 1.2.5メインで作成しているため、PSD形式では実際のテクスチャと一部異なる場合がございます。\n\n\n◇利用方法\n\n1.Armilly.zipを解凍します。\n\n2.Unityの新規プロジェクトを作成し、VRCSDK、Dynamic Bone（任意）をインポートします。\n\n3.Armilly.unitypackageをインポートし、Armilly.unityをダブルクリックします。\n\n4.VRCSDKからモデルをアップロードしてください。","url":"https://booth.pm/ja/items/1261662","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/e02efdb4-98ff-483d-9401-bc413dad47a2/i/1261662/0a307dac-5da7-4a94-9252-40d735861725_base_resized.jpg"}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
@@ -97,7 +97,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="x78kyD6NRLV5PKVTCTUNgq6iDJ4doYMClH42PRiKTXY="></script>
+    nonce="/8fPOPQifDNcoN3YiBoISntlIlp4A38H+YRY9q75meI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -112,7 +112,7 @@
         data-product-price="3000"
         data-shop-tracking-product-category="3D Models (Other)"
         data-shop-tracking-product-id="1261662"
-        data-shop-tracking-product-name="オリジナル3Dアバター アーミリィ"
+        data-shop-tracking-product-name="【オリジナル3Dモデル】アーミリィ"
         data-shop-tracking-product-price="3000" data-tracking=
         "detail_item" id="items">
           <div class="market"></div>
@@ -182,7 +182,7 @@
                           </div>
                           <h2 class=
                           "u-tpg-title1 u-mt-0 u-text-wrap u-mb-400">
-                            オリジナル3Dアバター アーミリィ
+                            【オリジナル3Dモデル】アーミリィ
                           </h2>
                           <div class=
                           "u-text-assertive u-tpg-caption1"></div>
@@ -248,7 +248,7 @@
                             <a data-url=
                             "https://booth.pm/ja/items/1261662"
                             data-lang="ja" data-hashtags="booth_pm"
-                            data-text="オリジナル3Dアバター アーミリィ | アストロミント"
+                            data-text="【オリジナル3Dモデル】アーミリィ | アストロミント"
                             data-count="none" class=
                             "twitter-share-button" href=
                             "https://twitter.com/share">ツイート</a>
@@ -274,7 +274,7 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="オリジナル3Dアバター アーミリィ" class=
+                            <img alt="【オリジナル3Dモデル】アーミリィ" class=
                             "market-item-detail-item-image"
                             data-origin=
                             "https://booth.pximg.net/e02efdb4-98ff-483d-9401-bc413dad47a2/i/1261662/0a307dac-5da7-4a94-9252-40d735861725.png"
@@ -285,7 +285,7 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="オリジナル3Dアバター アーミリィ" class=
+                            <img alt="【オリジナル3Dモデル】アーミリィ" class=
                             "market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/e02efdb4-98ff-483d-9401-bc413dad47a2/i/1261662/ed65b325-7fb1-4c6f-99a4-a313194f1027_base_resized.jpg"
@@ -296,7 +296,7 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="オリジナル3Dアバター アーミリィ" class=
+                            <img alt="【オリジナル3Dモデル】アーミリィ" class=
                             "market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/e02efdb4-98ff-483d-9401-bc413dad47a2/i/1261662/2a1f3a89-b20f-4716-b52e-6cc3416717c4_base_resized.jpg"
@@ -307,7 +307,7 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="オリジナル3Dアバター アーミリィ" class=
+                            <img alt="【オリジナル3Dモデル】アーミリィ" class=
                             "market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/e02efdb4-98ff-483d-9401-bc413dad47a2/i/1261662/4b4a1bcc-ed7a-43e8-adbe-dc1baa318c79_base_resized.jpg"
